<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.OperationsManagementActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_parameter_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_parameter_setting" />

        <Button
            android:id="@+id/btn_web_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_web_setting" />

        <Button
            android:id="@+id/btn_standby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_standby" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_change_password" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_android_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_android_setting" />

        <Button
            android:id="@+id/btn_android_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_android_test" />

        <Button
            android:id="@+id/btn_device_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_device_test" />

        <Button
            android:id="@+id/btn_clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_clear_data" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_update_user_info" />

        <Button
            android:id="@+id/btn_double_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_double_sim" />

        <Button
            android:id="@+id/btn_restore_production_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_restore_production_settings" />

        <Button
            android:id="@+id/btn_reboot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_reboot" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_control" />

        <Button
            android:id="@+id/btn_playback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_playback" />

        <Button
            android:id="@+id/btn_install_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_install_app" />

        <Button
            android:id="@+id/btn_aging_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_aging_test" />
    </LinearLayout>
</LinearLayout>