<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_ring_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ring_setting" />

        <Button
            android:id="@+id/btn_wifi_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_wifi_setting" />

        <Button
            android:id="@+id/btn_back_light_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_back_light_setting" />

        <Button
            android:id="@+id/btn_device_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_device_state" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_operations_management"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_operations_management_setting" />

        <Button
            android:id="@+id/btn_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_about_us" />
    </LinearLayout>

</LinearLayout>