<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/user_info"
        layout="@layout/include_main_user_info"
        app:layout_constraintBottom_toTopOf="@id/btn_main_msg"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_navigation"
        app:layout_constraintTop_toBottomOf="@id/user_info" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_navigation"
        app:layout_constraintLeft_toRightOf="@id/btn_main_msg"
        app:layout_constraintRight_toLeftOf="@id/btn_didi"
        app:layout_constraintTop_toTopOf="@id/btn_main_msg" />

    <Button
        android:id="@+id/btn_didi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/str_main_didi"
        app:layout_constraintLeft_toRightOf="@id/btn_navigation"
        app:layout_constraintRight_toLeftOf="@id/btn_settings"
        app:layout_constraintTop_toTopOf="@id/btn_main_msg" />

    <Button
        android:id="@+id/btn_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_settings"
        app:layout_constraintLeft_toRightOf="@id/btn_didi"
        app:layout_constraintRight_toLeftOf="@id/btn_event"
        app:layout_constraintTop_toTopOf="@+id/btn_main_msg" />

    <Button
        android:id="@+id/btn_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_main_event"
        app:layout_constraintLeft_toRightOf="@id/btn_settings"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_main_msg" />
</android.support.constraint.ConstraintLayout>