<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/root"
    android:layout_height="wrap_content"
    android:padding="8dp"
    app:layout_constrainedHeight="true"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@id/btn_main_msg">

    <ImageView
        android:id="@+id/iv_user_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_user_profile_default"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/txt_company_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_user_company_name"
        app:layout_constraintLeft_toRightOf="@id/iv_user_profile"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/txt_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_user_id"
        app:layout_constraintLeft_toLeftOf="@id/txt_company_name"
        app:layout_constraintTop_toBottomOf="@id/txt_company_name" />

    <TextView
        android:id="@+id/txt_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_user_name"
        app:layout_constraintLeft_toLeftOf="@id/txt_company_name"
        app:layout_constraintTop_toBottomOf="@id/txt_user_id" />

    <TextView
        android:id="@+id/txt_user_plate_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_user_plate_number"
        app:layout_constraintLeft_toLeftOf="@id/txt_company_name"
        app:layout_constraintTop_toBottomOf="@id/txt_user_name" />


</android.support.constraint.ConstraintLayout>