<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ParameterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/str_web_ip" />

        <EditText
            android:id="@+id/et_web_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/str_web_port" />

        <EditText
            android:id="@+id/et_web_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/str_business_ip" />

        <EditText
            android:id="@+id/et_business_ip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/str_business_port" />

        <EditText
            android:id="@+id/et_business_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7" />
    </LinearLayout>
</LinearLayout>