<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity">

    <Button
        android:id="@+id/btn_phone_book"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:text="@string/str_phone_book"
        app:layout_constraintBottom_toTopOf="@id/btn_call_history"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/lv_contacts"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_call_history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/str_call_history"
        app:layout_constraintBottom_toTopOf="@id/btn_call_police"
        app:layout_constraintLeft_toLeftOf="@id/btn_phone_book"
        app:layout_constraintRight_toRightOf="@id/btn_phone_book"
        app:layout_constraintTop_toBottomOf="@id/btn_phone_book" />

    <Button
        android:id="@+id/btn_call_police"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/str_call_police"
        app:layout_constraintBottom_toTopOf="@id/btn_contact_us"
        app:layout_constraintLeft_toLeftOf="@id/btn_phone_book"
        app:layout_constraintRight_toRightOf="@id/btn_phone_book"
        app:layout_constraintTop_toBottomOf="@id/btn_call_history" />

    <Button
        android:id="@+id/btn_contact_us"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/str_contact_us"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/btn_phone_book"
        app:layout_constraintRight_toRightOf="@id/btn_phone_book"
        app:layout_constraintTop_toBottomOf="@id/btn_call_police" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/lv_contacts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/test"
        app:layout_constrainedWidth="true"
        app:layout_constraintLeft_toRightOf="@id/btn_phone_book"
        app:layout_constraintRight_toRightOf="parent"></android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>