<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/iv_login_top_logo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:src="@drawable/ic_login_top_logo"
        app:layout_constraintBottom_toTopOf="@id/et_login_user_id"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_login_user_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="15"
        android:hint="@string/str_login_user_id_hint"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login_top_logo" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_login_user_id"
        app:layout_constraintLeft_toLeftOf="@id/et_login_user_id"
        app:layout_constraintRight_toRightOf="@id/et_login_user_id"
        app:layout_constraintTop_toBottomOf="@id/et_login_user_id" />

    <Button
        android:id="@+id/btn_login_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_login_history"
        app:layout_constraintLeft_toLeftOf="@id/btn_login"
        app:layout_constraintRight_toRightOf="@id/btn_login"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

</android.support.constraint.ConstraintLayout>