<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RingActivity">

    <TextView
        android:id="@+id/tv_ring_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_ring_volume"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/seek_ring_volume"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_ring_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/tv_ring_text"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/tv_media_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_media_volume"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ring_text" />

    <SeekBar
        android:id="@+id/seek_media_volume"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/tv_media_text"
        app:layout_constraintLeft_toRightOf="@id/tv_media_text"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_ring_source_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_ring_source"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_media_text" />

    <Button
        android:id="@+id/btn_ring_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Kuma"
        app:layout_constraintTop_toTopOf="@id/tv_ring_source_text"
        app:layout_constraintLeft_toRightOf="@id/tv_ring_source_text" />
</android.support.constraint.ConstraintLayout>